@startuml

hide circle
skinparam classAttributeIconSize 0

abstract class "{abstract} \n Command" {
    PromptType getPromptType()
    void setPromptType()
    CommandResult execute()
}

class CommandResult {
    String feedbackToUser
    Boolean isError
    Boolean isExit
}

abstract class "{abstract} \n AddCommand"
class AddModuleCommand
class AddTaskCommand

abstract class "{abstract} \n DeleteCommand"
class DeleteModuleCommand
class DeleteTaskCommand

abstract class "{abstract} \n EditCommand"
class EditModuleCommand
class EditTaskCommand

abstract class "{abstract} \n TimeTableCommand"
class TimeTableAddCommand
class TimeTableDeleteCommand
class TimeTableViewCommand

class DoneCommand
class UndoCommand
class HelpCommand
class ListCommand
class ExitCommand
class IncorrectCommand
enum "<<Enumeration>> \n PromptType" {
    WARNING,
    INFORMATIVE,
    NONE,
    EDIT
}

"{abstract} \n Command" <|- HelpCommand
"{abstract} \n Command" <|- ListCommand
"{abstract} \n Command" <|- ExitCommand
"{abstract} \n Command" <|-- "{abstract} \n DeleteCommand"
"{abstract} \n Command" <|-- "{abstract} \n AddCommand"
"{abstract} \n EditCommand" ---|> "{abstract} \n Command"
DoneCommand -|> "{abstract} \n Command"
UndoCommand -|> "{abstract} \n Command"
IncorrectCommand -|> "{abstract} \n Command"
"{abstract} \n TimeTableCommand" ---|> "{abstract} \n Command"

"<<Enumeration>> \n PromptType" ---* "1" "{abstract} \n Command"

"{abstract} \n Command" -- CommandResult : returns

"{abstract} \n AddCommand" <|-- AddModuleCommand
"{abstract} \n AddCommand" <|-- AddTaskCommand

"{abstract} \n DeleteCommand" <|-- DeleteModuleCommand
"{abstract} \n DeleteCommand" <|-- DeleteTaskCommand

EditModuleCommand --|> "{abstract} \n EditCommand"
EditTaskCommand --|> "{abstract} \n EditCommand"

TimeTableAddCommand --|> "{abstract} \n TimeTableCommand"
TimeTableDeleteCommand --|> "{abstract} \n TimeTableCommand"
TimeTableViewCommand --|> "{abstract} \n TimeTableCommand"

@enduml